[package]
name = "SolanaSentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.0"
solana-account-decoder = "3.0.0"
solana-commitment-config = { version = "3.0.0", features = ["serde"] }

anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tungstenite = "0.28.0"
futures-util = "0.3"
url = "2"
crossbeam-channel = "0.5"
solana-streamer-sdk = { path = "./solana-streamer", version = "0.5.0" }