[package]
name = "sol-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "1.16.18"
solana-client = "1.16.18"
solana-transaction-status = "1.16.18"
solana-program = "1.16.18"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["__rustls-tls"] }
tungstenite = "0.21"
futures-util = "0.3"
url = "2"
crossbeam-channel = "0.5"